fixed footer spacing

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,9 @@
     font-family: 'Lato', sans-serif;
     font-weight: 500;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 /* Center the MainSection between the TopAppBar and Footer */
