--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,9 @@
 .Footer {
-    position: fixed;
+    /* Remove position: fixed */
     width: 100%;
-    height: 200px;
+    height: auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
